<resources>
    <string name="app_name">Cube LED 2x2</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_text">Введите логин</string>
    <string name="password_text">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="enter2">Авторизация</string>
    <string name="Connect">Подключиться</string>
    <string name="Up1">Вверх</string>
    <string name="Down1">Вниз</string>
    <string name="Right1">Вправо</string>
    <string name="Left1">Влево</string>
    <string name="Right2">Вправо</string>
    <string name="Down2">Вниз</string>
    <string name="Up2">Вверх</string>
    <string name="Left2">Влево</string>
    <string name="visual_bluetooth">visual</string>
    <string name="ModeWorkingState">Направление движения светодиодов</string>
    <string name="Connect_Device_List">Имя устройства</string>
</resources>